--- a/pom.xml
+++ b/pom.xml
@@ -8,100 +8,83 @@
   <description>Spring Legacy Project</description>
   <properties>
 	<java-version>17</java-version>
-	<org.springframework-version>5.3.18</org.springframework-version>
-	<org.aspectj-version>1.6.10</org.aspectj-version>
-	<org.slf4j-version>1.6.6</org.slf4j-version> 
+	<org.springframework-version>6.1.2</org.springframework-version>
+	<org.aspectj-version>1.9.7</org.aspectj-version>
+	<org.slf4j-version>1.7.25</org.slf4j-version> 
 </properties>
 <dependencies>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-context</artifactId>
-		<version>${org.springframework-version}</version>
-		<exclusions>
-			<exclusion>
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-			</exclusion>
-		</exclusions>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-webmvc</artifactId>
-		<version>${org.springframework-version}</version>
-	</dependency>	
+	<!-- Spring -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-web</artifactId>
+	    <artifactId>spring-context</artifactId>
+	    <version>${org.springframework-version}</version>
+	    <exclusions>
+				<!-- Exclude Commons Logging in favor of SLF4j -->
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				 </exclusion>
+			</exclusions>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-webmvc</artifactId>
 	    <version>${org.springframework-version}</version>
 	</dependency>
-	<!-- AspectJ -->
+	<!-- Aspectj -->
 	<dependency>
-		<groupId>org.aspectj</groupId>
-		<artifactId>aspectjrt</artifactId>
-		<version>${org.aspectj-version}</version>
-	</dependency>	
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjrt</artifactId>
+	    <version>${org.aspectj-version}</version>
+	    <scope>runtime</scope>
+	</dependency>
 	<!-- Logging -->
 	<dependency>
-	  <groupId>org.apache.logging.log4j</groupId>
-	  <artifactId>log4j-api</artifactId>
-	  <version>2.12.1</version>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>${org.slf4j-version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.apache.logging.log4j</groupId>
-	  <artifactId>log4j-core</artifactId>
-	  <version>2.12.1</version>
+		<groupId>org.slf4j</groupId>
+		<artifactId>jcl-over-slf4j</artifactId>
+		<version>${org.slf4j-version}</version>
+		<scope>runtime</scope>
 	</dependency>
 	<dependency>
-	  <groupId>org.apache.logging.log4j</groupId>
-	  <artifactId>log4j-jcl</artifactId>
-	  <version>2.12.1</version>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>${org.slf4j-version}</version>
+		<scope>runtime</scope>
 	</dependency>
-	<dependency>
-	  <groupId>org.apache.logging.log4j</groupId>
-	  <artifactId>log4j-slf4j-impl</artifactId>
-	  <version>2.12.1</version>
-	</dependency>
-
 	<!-- @Inject -->
 	<dependency>
-		<groupId>javax.inject</groupId>
-		<artifactId>javax.inject</artifactId>
-		<version>1</version>
+	    <groupId>jakarta.inject</groupId>
+	    <artifactId>jakarta.inject-api</artifactId>
+	    <version>2.0.1</version>
 	</dependency>
-				
 	<!-- Servlet -->
 	<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>servlet-api</artifactId>
-		<version>2.5</version>
-		<scope>provided</scope>
-	</dependency>
-	<dependency>
-		<groupId>javax.servlet.jsp</groupId>
-		<artifactId>jsp-api</artifactId>
-		<version>2.1</version>
-		<scope>provided</scope>
-	</dependency>
-	<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>jstl</artifactId>
-		<version>1.2</version>
-	</dependency>
-	
-	<!-- Test -->
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.7</version>
-		<scope>test</scope>
-	</dependency>	
-	<!-- lombok -->
-	<dependency>
-	    <groupId>org.projectlombok</groupId>
-	    <artifactId>lombok</artifactId>
-	    <version>1.18.30</version>
+	    <groupId>jakarta.servlet</groupId>
+	    <artifactId>jakarta.servlet-api</artifactId>
+	    <version>6.0.0</version>
 	    <scope>provided</scope>
-	</dependency>	
+	</dependency>
+	<dependency>
+	    <groupId>jakarta.servlet.jsp</groupId>
+	    <artifactId>jakarta.servlet.jsp-api</artifactId>
+	    <version>3.1.1</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>jakarta.servlet.jsp.jstl</groupId>
+	    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+	    <version>3.0.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.glassfish.web</groupId>
+	    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+	    <version>3.0.1</version>
+	</dependency>
  </dependencies>
   <build>
     <plugins>
